--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,7 +4,7 @@
     list-style: none;
     text-decoration: none;
     font-family: 'Roboto Condensed', sans-serif;
-    font-size: 18px;
+    font-size: 14px;
     box-sizing: border-box;
 }
 
@@ -16,16 +16,19 @@
 }
 
 header{
-    width: 1000px;
     height: 120px;
     position: relative;
-    margin: 20px auto;
-  }
+    margin: 2px auto;
+}
+
+nav {
+    height: 48px;
+    position: relative;
+}
 
 .fila {
 	position: relative;
 	width: 100%;
-	height: auto;
 	margin: auto;
 	clear: both; /* limpia las filas y mantiene las cajas*/
 	display: table; /*respta las cajas faltantes, evita que se mueva un contenido a las cajas faltantes */
@@ -40,8 +43,17 @@ header{
 	width: 100%;
 }
 
+.col-3 {
+	width: 25%;
+}
+
 img {
     width: 100%;
-    height: 120px;
+    max-height: 120px;
 }
   
+.botones {
+    background: #888;
+    color: white;
+    text-align: center;
+}
