--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,7 +4,7 @@
     list-style: none;
     text-decoration: none;
     font-family: 'Roboto Condensed', sans-serif;
-    font-size: 14px;
+    font-size: 18px;
     box-sizing: border-box;
 }
 
@@ -57,3 +57,58 @@ img {
     color: white;
     text-align: center;
 }
+
+.calc {
+    width: 225px;
+    height: 270px;
+    margin: 30px auto;
+    padding: 5px ;
+    background: #919aa3;
+    border-radius: 3px;
+}
+
+.pantalla, .pant {
+    height: 40px;
+    width: 204px;
+    padding: 0 1px;                
+    background-color:#9d7b7c; 
+    border-radius: 3px;
+    box-shadow: inset 0px 4px rgba(0, 0, 0, 0.2);
+    color:rgb(5, 5, 5);
+    font-size: 20px;
+    line-height: 40px;                
+    text-align: right;
+    letter-spacing: 1px;
+}
+
+.botones_calc {
+    overflow: hidden;
+    margin-top: 10px;
+}
+
+.botones_calc button {
+    float: left;
+    position: relative;
+    width: 66px;
+    height: 36px;
+    background: #d7dbdd;
+    border-radius: 5px;
+    margin: 0 7px 11px 0;
+    color: rgb(8, 8, 8);
+    line-height: 36px;
+    text-align: center;
+}
+
+button:hover {
+    background: #5f7381;
+    /*color: white;*/
+}
+
+.igual_centrado {                
+    background: #2989b8;
+    color: white;  
+    margin: auto;
+    height: 20px;
+    width: 100%;
+}
+
