--- a/css/estilo.css
+++ b/css/estilo.css
@@ -56,6 +56,7 @@ img {
     background: #888;
     color: white;
     text-align: center;
+    font-style: italic;
 }
 
 .calc {
@@ -69,9 +70,9 @@ img {
 
 .pantalla, .pant {
     height: 40px;
-    width: 204px;
+    width: 100%;
     padding: 0 1px;                
-    background-color:#9d7b7c; 
+    background-color:#8b9d7b; 
     border-radius: 3px;
     box-shadow: inset 0px 4px rgba(0, 0, 0, 0.2);
     color:rgb(5, 5, 5);
@@ -94,7 +95,7 @@ img {
     background: #d7dbdd;
     border-radius: 5px;
     margin: 0 7px 11px 0;
-    color: rgb(8, 8, 8);
+    color: rgb(5, 5, 5);
     line-height: 36px;
     text-align: center;
 }
